fixed white gape

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  height: 100vh;
+  /* height: 100vh; */
   display: grid;
   place-items: center;
   overflow: hidden;
@@ -62,7 +62,7 @@ body {
 main {
   position: relative;
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.3);
 }
 
